commint before notation
