# src/routes/train.routes.ts
@@ -5,30 +5,31 @@ import validationMiddleware from '@middlewares/validation.middleware';
 import rolesmiddleware from '@/middlewares/role.middleware';
 import Roles from '@/roles/roles';
 import TrainController from '@/controllers/train.controller';
-import { CreateTrainDto } from '@/dtos/train.dtos';
+import { CreateTrainDto, UpdateTrainDto } from '@/dtos/train.dto';
 
 class TrainRoute implements Routes {
   public path = '/train';
   public router = Router();
-  public usersController = new TrainController();
+  public trainController = new TrainController();
 
   constructor() {
     this.initializeRoutes();
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}/:id`, this.usersController.getTrainById);
+    this.router.get(`${this.path}/:asc/:categorie/:limit`, this.trainController.getTrainAll);
+    this.router.get(`${this.path}/:id`, this.trainController.getTrainById);
     this.router.post(
       `${this.path}`,
-      [authMiddleware, rolesmiddleware([Roles.ADMIN], true), validationMiddleware(CreateTrainDto, 'body')],
-      this.usersController.createTrain,
+      [authMiddleware, rolesmiddleware([Roles.ADMIN], false), validationMiddleware(CreateTrainDto, 'body')],
+      this.trainController.createTrain,
     );
     this.router.put(
       `${this.path}/:id`,
-      [authMiddleware, rolesmiddleware([Roles.ADMIN], true), validationMiddleware(CreateTrainDto, 'body')],
-      this.usersController.updateTrain,
+      [authMiddleware, rolesmiddleware([Roles.ADMIN], false), validationMiddleware(UpdateTrainDto, 'body')],
+      this.trainController.updateTrain,
     );
-    this.router.delete(`${this.path}/:id`, [authMiddleware, rolesmiddleware([Roles.ADMIN], true)], this.usersController.deleteTrain);
+    this.router.delete(`${this.path}/:id`, [authMiddleware, rolesmiddleware([Roles.ADMIN], false)], this.trainController.deleteTrain);
   }
 }
 
